--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,6 @@ dev = [
     "ruff (>=0.14.10,<0.15.0)",
     "bandit (>=1.9.2,<2.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
-    "pre-commit (>=4.5.1,<5.0.0)"
+    "pre-commit (>=4.5.1,<5.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
