--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ build-backend = "poetry.core.masonry.api"
 packages = [
     { include = "cyprus_fish", from = "src" }
 ]
+[tool.pytest.ini_options]
+pythonpath = "."
+testpaths = ["tests"]
+
 [dependency-groups]
 dev = [
     "ruff (>=0.14.10,<0.15.0)",
