--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,7 @@
 # conf/config.yaml
 defaults:
   - _self_          
-  - prepare_data: cyprus_fish    
+  - prepare_data: cyprus_fish
+  - data: cyprus_fish
+  - processor: convnext_tiny    
 
