--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,5 +3,6 @@ defaults:
   - _self_          
   - prepare_data: cyprus_fish
   - data: cyprus_fish
-  - processor: convnext_tiny    
+  - model: convnext_tiny    
+  - train: default
 
