--- a/configs/train/default.yaml
+++ b/configs/train/default.yaml
@@ -1,7 +1,14 @@
-batch_size: 32   # ConvNeXt est léger, on peut monter
-epochs: 10
-lr: 5e-5
+k_folds: 2
+batch_size: 32   
+grad_acc: 1
+epochs: 2
+lr: 3e-4
+warmup_steps: 0
 weight_decay: 0.01
-num_workers: 4   # Lié à la machine d'entraînement
+scheduler: "constant"
+num_workers: 4   
 seed: 42
 device: "cuda"
+fp16: True
+freeze_backbone: True
+push_to_hub: True
