--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
     "pillow (>=12.0.0,<13.0.0)",
     "torch (>=2.9.1,<3.0.0)",
     "torchvision (>=0.24.1,<0.25.0)",
-    "transformers (>=4.57.3,<5.0.0)"
+    "transformers (>=4.57.3,<5.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "uvicorn (>=0.40.0,<0.41.0)",
+    "fastapi (>=0.128.0,<0.129.0)",
+    "python-multipart (>=0.0.21,<0.0.22)"
 ]
 
 
@@ -45,3 +49,4 @@ dev = [
 [tool.poetry.scripts]
 kfold_training = "src.cyprus_fish.train:train_k_fold"
 training = "src.cyprus_fish.train:train"
+backend_start = "src.app.backend:start"
