--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
     "fastapi (>=0.128.0,<0.129.0)",
-    "python-multipart (>=0.0.21,<0.0.22)"
+    "python-multipart (>=0.0.21,<0.0.22)",
+    "gradio (>=6.2.0,<7.0.0)"
 ]
 
 
@@ -49,4 +50,4 @@ dev = [
 [tool.poetry.scripts]
 kfold_training = "src.cyprus_fish.train:train_k_fold"
 training = "src.cyprus_fish.train:train"
-backend_start = "src.app.backend:start"
+application_start = "src.app.api:start"
