--- a/.github/workflows/test_docker.yaml
+++ b/.github/workflows/test_docker.yaml
@@ -14,6 +14,17 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
+            - name: Free Disk Space (Ubuntu) 
+              uses: jlumbroso/free-disk-space@main
+              with:
+                tool-cache: true
+                android: true
+                dotnet: true
+                haskell: true
+                large-packages: true
+                docker-images: true
+                swap-storage: false
+                
             - name: Checkout code
               uses: actions/checkout@v4
 
@@ -23,10 +34,26 @@ jobs:
                 python-version: "3.11.5"
 
             - name: Install Poetry
-              run: pip install poetry
+              uses: snok/install-poetry@v1
+              with:
+                virtualenvs-create: true
+                virtualenvs-in-project: true
 
-            - name: Install Dependencies
-              run: poetry install --only main
+             # check if cache already exists
+            - name: Load cached venv
+              id: cached-poetry-dependencies
+              uses: actions/cache@v3
+              with:
+                path: .venv
+                key: venv-cpu-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+            - name: Install dependencies
+              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+              run: |
+                pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+                poetry install --no-interaction --no-root
+
+
         # =======
     build-and-push:
         needs: test
