--- a/.github/workflows/test_docker.yaml
+++ b/.github/workflows/test_docker.yaml
@@ -24,7 +24,7 @@ jobs:
                 large-packages: true
                 docker-images: true
                 swap-storage: false
-                
+
             - name: Checkout code
               uses: actions/checkout@v4
 
@@ -67,7 +67,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v4
 
-        # --- CORRECTION MINUSCULES ---
+        # lower case correction
         - name: Lowercase Repo Name
           run: |
            echo "IMAGE_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -95,3 +95,32 @@ jobs:
             push: true
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
+
+    deploy-to-hf:
+        needs: build-and-push
+        runs-on: ubuntu-latest
+        steps:
+        - name: Lowercase Repo Name for URL
+          run: |
+            echo "LOWERCASE_REPO=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        
+        - name: Update HF Space Dockerfile
+          env:
+            HF_TOKEN: ${{ secrets.HF_TOKEN }}
+            HF_USERNAME: JayRay5      
+            SPACE_NAME: Cyprus-Fish-Recognition-App     
+            DOCKER_IMAGE: ghcr.io/${{ env.LOWERCASE_REPO }}:latest
+          run: |
+            git config --global user.email "bot@github.com"
+            git config --global user.name "GitHub Action Bot"
+            
+            git clone https://oauth2:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME space_repo
+            cd space_repo
+            
+            echo "Deploying Image: $DOCKER_IMAGE"
+            
+            echo "FROM $DOCKER_IMAGE" > Dockerfile
+            
+            git add Dockerfile
+            git commit -m "Deploy: Update image from GitHub Actions" --allow-empty
+            git push --force
