--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,10 @@
 .git
 .gitignore
 .pre-commit-config.yaml
+.cache/
+.github/
+README.md
+
 
 # Virtual env
 .venv
@@ -11,14 +15,17 @@ __pycache__/
 *.pyc
 .ipynb_checkpoints
 
-# Local data
+
+# Local and training files
 data/
 *.ipynb
 *.log
+*.out
 experiments/
-
-# Training files
 src/cyprus_fish/
+scripts/
+notebooks/
+configs/
 
 # Security
 .env
