--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,10 +4,18 @@ on:
   push:
     branches: 
       - "main"
-      - "feat/**"  # Autorise feat/training-loop, feat/dataloader, etc.
-      - "fix/**"
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
+      - '.gitignore'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+        - 'README.md'
+        - 'LICENSE'
+        - 'docs/**'  # Si tu as un dossier de documentation
+        - '.gitignore'
+        
   workflow_dispatch:
 
 env:
