--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -65,7 +65,7 @@ jobs:
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: |
         pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
-        poetry install --no-interaction --no-root
+        poetry install --no-interaction --no-root --with dev
 
     - name: Security Scan with Bandit
       run: poetry run bandit -r src/ scripts/ -ll -ii
