poetry version fixed in github action

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -62,13 +62,12 @@ jobs:
         key: venv-cpu-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
-      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: |
         pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
         poetry install --no-interaction --no-root
 
-    #- name: Security Scan with Bandit
-    #  run: poetry run bandit -r src/ scripts/ -ll -ii
+    - name: Security Scan with Bandit
+      run: poetry run bandit -r src/ scripts/ -ll -ii
 
     - name: Run Unit Tests 
       env:
