--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -49,9 +49,12 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
-          version: "2.0.0"
+          version: "2.0.1"
           virtualenvs-create: true
           virtualenvs-in-project: true
+    
+    - name: Check Poetry Version
+      run: poetry --version
 
       # check if cache already exists
     - name: Load cached venv
