--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "uvicorn (>=0.40.0,<0.41.0)",
     "fastapi (>=0.128.0,<0.129.0)",
     "python-multipart (>=0.0.21,<0.0.22)",
-    "gradio (>=6.2.0,<7.0.0)"
+    "gradio (>=6.2.0,<7.0.0)",
+    "mlflow (>=3.8.1,<4.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 
