update actions with bandit

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -70,7 +70,7 @@ jobs:
         poetry install --no-interaction --no-root
 
     - name: Security Scan with Bandit
-      run: poetry run bandit -r src/ scripts/ -ll -ii
+      run:  bandit -r src/ scripts/ -ll -ii
 
     - name: Run Unit Tests 
       env:
